// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LogShield CLI --dry-run (SNAPSHOT) > default mode dry-run preview 1`] = `
"[DRY RUN] Detected redactions:
  PASSWORD  x1

No output was modified.
Use without --dry-run to apply.
"
`;

exports[`LogShield CLI --dry-run (SNAPSHOT) > strict mode dry-run preview 1`] = `
"[DRY RUN] Detected redactions:
  AWS_ACCESS_KEY  x1
  CREDIT_CARD     x1

No output was modified.
Use without --dry-run to apply.
"
`;
